# atlas

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  style.yml
etc/: get_assets.sh  setup.sh
src/: main.rs  teapot.rs
src/atlas_core/: camera.rs  egui.rs  imgui_wrapper.rs  mesh.rs  mod.rs  system.rs  texture.rs
src/atlas_core/renderer/: deferred.rs  mod.rs  shadow_map.rs  triangle_draw_system.rs
src/renderer/: deferred.rs  mod.rs
src/shaders/: deferred.frag  deferred.vert  identity.frag  identity.vert  imgui.vert  lighting.frag  lighting.vert  shadow_map.frag
